--- a/TMS/TMS.vcxproj
+++ b/TMS/TMS.vcxproj
@@ -143,6 +143,9 @@
     <ClInclude Include="Person.h" />
     <ClInclude Include="Service.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Service.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
